--- a/views/student_home.ejs
+++ b/views/student_home.ejs
@@ -5,5 +5,16 @@
     <body>
         <h3><%= locals.title %></h3>
         <h2>Welcome to Student from template</h2>
+        <form action="/student/sign-in" method="POST">
+            <input type="email" name="email" placeholder="Enter your Id" required />
+            <input
+              type="password"
+              name="password"
+              placeholder="Enter your password"
+              required
+            />
+            <input type="submit" value="sign-In" />
+        </form>
+        <button type="button"><a href="/student/sign-up">SignUp</a></button>
     </body>
 </html>
